nats-micro/tests/ui/service_error_invalid_details.stderr
error: #[details(...)] on a field only accepts skip
 --> tests/ui/service_error_invalid_details.rs:8:9
  |
8 |         #[details(secret)]
  |         ^^^^^^^^^^^^^^^^^^
