nats-micro/tests/ui/service_error_invalid_details.rs
use nats_micro::service_error;

#[service_error]
pub enum DemoError {
    #[error("bad {password}")]
    Bad {
        username: String,
        #[details(secret)]
        password: String,
    },
}

fn main() {}
